# QuicklIME

./: .gitignore  README.md
.claude/: CLAUDE.md
data/: romaji-azik.tsv
docs/: llm-rerank-notes.md  memo.md  protocol.md  roadmap.md
engine/: Cargo.toml  build.rs
engine/examples/: query.rs
engine/src/: config.rs  convert.rs  datetime.rs  dict.rs  learn.rs  main.rs  matrix.rs  pos.rs  predict.rs  userdict.rs
engine/tests/: pipe.rs
engine/tests/fixtures/: dictionary00.txt  id.def  symbol.tsv
installer/: build.ps1  installer.iss
logo_design/: QuicklIME-horizontal-dark.ai  QuicklIME-horizontal-mono.ai  QuicklIME-icon.ai  QuicklIME-icon_16.ai
scripts/: dev-deploy.ps1
tsf/: CMakeLists.txt
tsf/src/: QuicklIME.rc  candidate_window.cpp  candidate_window.h  config.cpp  config.h  display_attribute.cpp  display_attribute.h  dll_main.cpp  edit_session.cpp  edit_session.h  engine_client.cpp  engine_client.h  globals.cpp  globals.h  kana_forms.cpp  kana_forms.h  lang_bar.cpp  lang_bar.h  registry.cpp  registry.h  resource.h  romaji.cpp  romaji.h  text_service.cpp  text_service.h
